feat: show product by category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
             </div>
 
           </div>
-          <app-product-list></app-product-list>
+          <router-outlet></router-outlet>
         </div>
       </div>
     </div>
