--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,57 +1,57 @@
 <div class="product">
     <div class="grid__row mobile-content">
-      <div class="col l-2-4 m-4 c-6" *ngFor="let tempProduct of products">
-        <a href="" class="product-item">
-            <div class="product-item__img" style="background-image: url({{tempProduct.imageUrl}})"></div>
-            <div class="product-item-wrap">
-                <div class="product-item__name">{{tempProduct.name}}</div>`
-                <div class="product-item__sale">
-                    <span class="product-item__sale-content">0% TRẢ GÓP</span>
-                </div>
-                <div class="product-item__price">
-                    <!-- <span class="product-item__price-old">
-                        <span class="product-item__price-currency">đ</span>4.390.000
-                    </span> -->
-                    
-                    <span class="product-item__price-current">
-                        {{tempProduct.unitPrice * 23000 | currency: 'VND'}}
-                    </span>
-
-                    <span class="product-item__price-ship">
-                        <i class="product-item__price-ship-icon fas fa-shipping-fast"></i>
-                    </span>
-                </div>
-                <div  class="procduct-item__status">
-                    <!-- Heart actived: procduct-item__status-heart--actived -->
-                    <span class="procduct-item__status-heart">
-                        <i class="procduct-item__status-heart-icon-not-actived far fa-heart"></i>
-                        <i class="procduct-item__status-heart-icon-actived fas fa-heart"></i>
-                    </span>
-
-                    <div class="procduct-item__status-rating">
-                        <i class="procduct-item__status-rating-icon fas fa-star"></i>
-                        <i class="procduct-item__status-rating-icon fas fa-star"></i>
-                        <i class="procduct-item__status-rating-icon fas fa-star"></i>
-                        <i class="procduct-item__status-rating-icon fas fa-star"></i>
-                        <i class="procduct-item__status-rating-icon fas fa-star"></i>
+        <div *ngFor="let product of products" class="col l-2-4 m-4 c-6">
+            <a href="" class="product-item">
+                <div class="product-item__img" style="background-image: url({{product.image}})"></div>
+                <div class="product-item-wrap">
+                    <div class="product-item__name">{{product.title}}</div>
+                    <div class="product-item__sale">
+                        <span class="product-item__sale-content">0% TRẢ GÓP</span>
                     </div>
-                    <div class="procduct-item__status-quantity-sold">Đã bán 8,7k</div>
-                </div>
-                <span class="product-item__origin">TP. Hồ Chí Minh</span>
+                    <div class="product-item__price">
+                        <!-- <span class="product-item__price-old">
+                            <span class="product-item__price-currency">đ</span>4.390.000
+                        </span> -->
+                        
+                        <span class="product-item__price-current">
+                            {{product.price * 23000 | currency: 'VND'}}
+                        </span>
 
-                <div class="product-item__status">
-                    <div class="product-item__status-wrap">
-                        <span>XỬ LÍ ĐƠN HÀNG</span><br>
-                        <span>BỞI SHOPEE</span>
+                        <span class="product-item__price-ship">
+                            <i class="product-item__price-ship-icon fas fa-shipping-fast"></i>
+                        </span>
                     </div>
-                    
+                    <div  class="procduct-item__status">
+                        <!-- Heart actived: procduct-item__status-heart--actived -->
+                        <span class="procduct-item__status-heart">
+                            <i class="procduct-item__status-heart-icon-not-actived far fa-heart"></i>
+                            <i class="procduct-item__status-heart-icon-actived fas fa-heart"></i>
+                        </span>
+
+                        <div class="procduct-item__status-rating">
+                            <i class="procduct-item__status-rating-icon fas fa-star"></i>
+                            <i class="procduct-item__status-rating-icon fas fa-star"></i>
+                            <i class="procduct-item__status-rating-icon fas fa-star"></i>
+                            <i class="procduct-item__status-rating-icon fas fa-star"></i>
+                            <i class="procduct-item__status-rating-icon fas fa-star"></i>
+                        </div>
+                        <div class="procduct-item__status-quantity-sold">Đã bán {{product.rating.count}}</div>
+                    </div>
+                    <span class="product-item__origin">TP. Hồ Chí Minh</span>
+
+                    <div class="product-item__status">
+                        <div class="product-item__status-wrap">
+                            <span>XỬ LÍ ĐƠN HÀNG</span><br>
+                            <span>BỞI SHOPEE</span>
+                        </div>
+                        
+                    </div>
+                    <div class="product-item__sale-off">
+                        <span class="product-item__sale-off-percent">29%</span><br>
+                        <span class="product-item__sale-off-label">GIẢM</span>
+                    </div>
                 </div>
-                <!-- <div class="product-item__sale-off">
-                    <span class="product-item__sale-off-percent">29%</span><br>
-                    <span class="product-item__sale-off-label">GIẢM</span>
-                </div> -->
-            </div>
-        </a>
-      </div>
+            </a>
+        </div>
     </div>
-  </div>
+</div>
