--- a/src/app/components/category/category.component.css
+++ b/src/app/components/category/category.component.css
@@ -2,12 +2,18 @@
     background-color: var(--white-color);
     border-radius: 2px;
     margin-top: 36px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .category__heading {
-    padding: 18px 0 4px 22px;
     font-size: 1.4rem;
+    font-weight: bold;
     color: var(--text-color);
+    padding-top: 18px;
+    padding-bottom: 4px;
+
 }
 
 .category__list {
@@ -18,20 +24,24 @@
     padding: 12px 18px 12px 22px;
 }
 
-.category__item-link {
-    position: relative;
-    text-decoration: none;
+.category__item {
     display: block;
-    color: var(--text-color);
-    padding: 11px 0;
     font-size: 1.3rem;
+    padding: 11px 0;
+    color: var(--text-color);
+    text-decoration: none;
 }
 
-.category__item--active a {
-    color: var(--primary-color);
+.category__item + .category__item {
+    border-top: 1px solid rgb(230, 227, 227);
 }
 
-.category__item--active a::before {
+.category__item--active {
+    color: var(--primary-color); 
+    position: relative;
+} 
+
+.category__item--active::before {
     content: "";
     position: absolute;
     top: 50%;
@@ -39,8 +49,4 @@
     transform: translateY(calc(-50% - 1px));
     border: 5px solid;
     border-color: transparent transparent transparent var(--primary-color);
-}
-
-.category__item + .category__item {
-    border-top: 1px solid rgb(230, 227, 227);
 }
